# dbt-snapshot-metadata

./: .gitignore  README.md  pyproject.toml
db_ootb_snapshot/: dbt_project.yml  packages.yml
db_ootb_snapshot/models/my_data_xform/: all_the_things_xform.sql
dbt_snapshot_ootb/: Makefile  dbt_project.yml
dbt_snapshot_ootb/seeds/: all_the_source_data.csv
dbt_snapshot_ops_metadata/: Makefile  dbt_project.yml
dbt_snapshot_ops_metadata/macros/: default__build_snapshot_table.sql  default__snapshot_merge_sql.sql  default__snapshot_staging_table.sql
dbt_snapshot_ops_metadata/snapshots/: all_the_things_snap.sql
