[tool.poetry]
name = "dbt-snapshot-metadata"
version = "0.1.0"
description = "Example of adding operational metadata to dbt snapshot tables"
authors = ["Chris Ottinger <chris@gammadata.io>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "dbt_snapshot_metadata"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-bigquery = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
sqlfluff = "^1.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
